# mdbToSqlite

./: .gitignore  index.html  package-lock.json  package.json  vite.config.js
plugin/: CMakeLists.txt  app_handlers.cpp
src/: App.vue  main.js  style.css
src/components/: FolderToolbar.vue  MdbTable.vue
